* Fixed checkbox size issues * Fixed wizard__container overflow issue * Added z-index to react-select in pedagogy form

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/hops.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/hops.scss
@@ -414,6 +414,7 @@
   display: flex;
   height: 1.5rem;
   justify-content: center;
+  padding: 4px 10px;
   margin: 0 10px 0 0;
   width: 1.5rem;
 
