--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/wizard.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/wizard.scss
@@ -177,6 +177,7 @@
 
 .wizard__container {
   min-height: 400px;
+  overflow: hidden;
 }
 
 .wizard__footer {
